Should run on Java11 now